--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,6 @@
 {
   "compilerOptions": {
-
-    "baseUrl": ".",
+    "baseUrl": "src",
 
     "target": "ES2020",
     "useDefineForClassFields": true,
