--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"build": "tsc && vite build",
 		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
 		"preview": "vite preview",
-		"publish": "npx gh-page -d dist/ -b gh-page"
+		"publish": "npx gh-pages -d dist/ -b gh-page"
 	},
 	"dependencies": {
 		"@emotion/react": "^11.11.1",
